--- a/default.hbs
+++ b/default.hbs
@@ -31,14 +31,10 @@
                 <section class="copyright">
                     <a href="{{@site.url}}">{{@site.title}}</a> &copy; {{date format="YYYY"}}
                     <a href="{{@site.url}}">Home</a>
-                    <a href="{{@site.url}}">Signup</a>
+                    <a href="{{@site.url}}">{{t "Signup"}}</a>
                     {{#if @site.facebook}}<a href="{{facebook_url @site.facebook}}" target="_blank" rel="noopener">Facebook</a>{{/if}}
                     {{#if @site.twitter}}<a href="{{twitter_url @site.twitter}}" target="_blank" rel="noopener">Twitter</a>{{/if}}
                 </section>
-                <nav class="site-footer-nav">
-                    Published with
-                    <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a>
-                </nav>
             </div>
         </footer>
 
