--- a/partials/notifications.hbs
+++ b/partials/notifications.hbs
@@ -1,19 +1,19 @@
 <div class="notification notification-subscribe">
     <a class="notification-close" href="javascript:;"></a>
-    You've successfully subscribed to {{@site.title}}
+    {{t "You've successfully subscribed to {blogtitle}" blogtitle=@site.title}}
 </div>
 
 <div class="notification notification-signup">
     <a class="notification-close" href="javascript:;"></a>
-    Great! Next, complete checkout for full access to {{@site.title}}
+    {{t "Great! Next, complete checkout for full access to {blogtitle}" blogtitle=@site.title}}
 </div>
 
 <div class="notification notification-signin">
     <a class="notification-close" href="javascript:;"></a>
-    Welcome back! You've successfully signed in
+    {{t "Welcome back! You've successfully signed in"}}
 </div>
 
 <div class="notification notification-checkout">
     <a class="notification-close" href="javascript:;"></a>
-    Success! Your account is fully activated, you now have access to all content.
+    {{t "Success! Your account is fully activated, you now have access to all content."}}
 </div>
