--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -22,7 +22,7 @@
 
             <header class="post-card-header">
                 <div class="post-card-header-tags">
-                    <span class="post-visibility post-visibility-{{visibility}}">Free Post</span>
+                    <span class="post-visibility post-visibility-{{visibility}}">{{t "Free Post"}}</span>
                     {{#if primary_tag}}
                         {{#primary_tag}}
                             <div class="post-card-primary-tag">{{name}}</div>
@@ -63,7 +63,7 @@
                 {{/foreach}}
             </ul>
             <div class="post-card-byline-content">
-                <span>{{#has author="count:>2"}}Multiple authors{{else}}{{authors}}{{/has}}</span>
+                <span>{{#has author="count:>2"}}{{t "Multiple authors"}}{{else}}{{authors}}{{/has}}</span>
                 <span class="post-card-byline-date"><time datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMM YYYY"}}</time> <span class="bull">&bull;</span> {{reading_time}}</span>
             </div>
         </footer>
