--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -19,10 +19,10 @@
     <div class="site-nav-right">
         {{#if @member}}
             <a class="account-link" href="/account/">Account</a>
-            <a class="button small header-cta signout-link" href="#signout" data-members-signout>Log out</a>
+            <a class="button small header-cta signout-link" href="#signout" data-members-signout>{{t "Log out"}}</a>
         {{else}}
-            <a class="signin-link" href="/signin/">Log in</a>
-            <a class="button primary small header-cta" href="/signup/">Subscribe</a>
+            <a class="signin-link" href="/signin/">{{t "Log in"}}</a>
+            <a class="button primary small header-cta" href="/signup/">{{t "Subscribe"}}</a>
         {{/if}}
     </div>
 </nav>
