--- a/members/signup.hbs
+++ b/members/signup.hbs
@@ -66,7 +66,7 @@
                 </button>
             </div>
             <p><small>{{t "Already have an account? "}} <a href="/signin/">{{t "Sign in"}}</a></small></p>
-            <div class="message-success"><strong>{{t "Great!"}}</strong> {t "Check your inbox and click the link to confirm your subscription"}}</div>
+            <div class="message-success"><strong>{{t "Great!"}}</strong> {{t "Check your inbox and click the link to confirm your subscription"}}</div>
             <div class="message-error">{{t "Please enter a valid email address!"}}</div>
         </form>
 
