--- a/members/account.hbs
+++ b/members/account.hbs
@@ -16,35 +16,35 @@
                 <div class="subscription">
                     {{#if cancel_at_period_end}}
                         <p>
-                            <strong class="subscription-expiration-warning">Your subscription will expire on {{date current_period_end format="DD MMM YYYY"}}.</strong> If you change your mind in the meantime you can turn auto-renew back on to continue your subscription.
+                            <strong class="subscription-expiration-warning">{{t "Your subscription will expire on {date current_period_end format='DD MMM YYYY'}"}}.</strong> If you change your mind in the meantime you can turn auto-renew back on to continue your subscription.
                         </p>
                     {{else}}
                         <p>
-                            Hey! You have an active {{@site.title}} account with access to all areas. Get in touch if have any problems or need some help getting things updated, and thanks for subscribing.
+                            {{t "Hey! You have an active {blogtitle} account with access to all areas. Get in touch if have any problems or need some help getting things updated, and thanks for subscribing." blogtitle=@site.title}}
                         </p>
                     {{/if}}
                     <div class="subscriber-details">
                         <div class="subscriber-detail">
-                            <label class="subscriber-detail-label">Email address</label>
+                            <label class="subscriber-detail-label">{{t "Email address"}}</label>
                             <span class="subscriber-detail-content">{{@member.email}}</span>
                         </div>
 
                         <div class="subscriber-detail">
-                            <label class="subscriber-detail-label">Your plan</label>
+                            <label class="subscriber-detail-label">{{t "Your plan"}}</label>
                             <span class="subscriber-detail-content">${{price plan.amount}}/{{plan.interval}}</span>
                         </div>
 
                         <div class="subscriber-detail">
-                            <label class="subscriber-detail-label">Card</label>
+                            <label class="subscriber-detail-label">{{t "Card"}}</label>
                             <span class="subscriber-detail-content">**** **** **** {{default_payment_card_last4}}</span>
                         </div>
 
                         <div class="subscriber-detail">
                             <label class="subscriber-detail-label">
                                 {{#if cancel_at_period_end}}
-                                    Expires
+                                    {{t "Expires"}}
                                 {{else}}
-                                    Next bill date
+                                    {{t "Next bill date"}}
                                 {{/if}}
                             </label>
                             <span class="subscriber-detail-content">{{date current_period_end format="DD MMM YYYY"}}</span>
@@ -60,11 +60,11 @@
 
         {{!-- Logged in, not paying: Link to checkout --}}
         <div class="account-box">
-            <h1 class="account-box-title">Currently, you're not a subscriber</h1>
-            <p>Hey there! <strong>{{@member.email}}</strong> is subscribed to free updates from {{@site.title}}, but doesn't have a paid subscription to unlock full access.</p>
+            <h1 class="account-box-title">{{t "Currently, you're not a subscriber"}}</h1>
+            <p>{{t "Hey there!"}} <strong>{{@member.email}}</strong> {{t "is subscribed to free updates from {blogtitle}, but doesn't have a paid subscription to unlock full access." blogtitle=@site.title}}</p>
             <div class="authbox-signup">
                 <a class="button primary" href="/signup/">
-                    <span class="button-content">Subscribe now</span>
+                    <span class="button-content">{{t "Subscribe now"}}</span>
                 </a>
             </div>
         </div>
