--- a/members/account.hbs
+++ b/members/account.hbs
@@ -31,7 +31,7 @@
 
                         <div class="subscriber-detail">
                             <label class="subscriber-detail-label">{{t "Your plan"}}</label>
-                            <span class="subscriber-detail-content">${{price plan.amount}}/{{plan.interval}}</span>
+                            <span class="subscriber-detail-content">${{plan.amount}}/{{plan.interval}}</span>
                         </div>
 
                         <div class="subscriber-detail">
