--- a/members/account.hbs
+++ b/members/account.hbs
@@ -10,7 +10,7 @@
 
         {{!-- Logged in, paying member: Show account info --}}
         <div class="subscriber-box">
-            <h1 class="subscriber-box-title">{{t "Your account"}}</h1>
+            <h1 class="subscriber-box-title">Your account</h1>
 
             {{#foreach @member.subscriptions}}
                 <div class="subscription">
