--- a/post.hbs
+++ b/post.hbs
@@ -116,7 +116,7 @@ into the {body} of the default.hbs template --}}
 
                 <section class="post-full-content">
                     <div class="post-content">
-                        <p>{{t "You don't have access to this post on <strong>{blogtitle}</strong> at the moment, but if you upgrade your account you'll be able to see the whole thing, as well as all the other posts in the archive! Subscribing only takes a few seconds and will give you immediate access.": "You don't have access to this post on <strong>{blogtitle}</strong> at the moment, but if you upgrade your account you'll be able to see the whole thing, as well as all the other posts in the archive! Subscribing only takes a few seconds and will give you immediate access." blogtitle=@site.title}}</p>
+                        <p>Test</p>
                     </div>
                     <aside class="post-upgrade-cta">
                         <div class="post-upgrade-cta-content">
