--- a/members/signup.hbs
+++ b/members/signup.hbs
@@ -13,44 +13,8 @@
 
     {{else if @member}}
 
-        {{!-- Logged in, not paying: Check out --}}
-        <div class="checkout-form">
-            <h1 class="checkout-title">{{t "Choose your subscription"}}</h1>
-            <p>{{t "Unlock full access to {blogtitle} and see the entire library of members-only content & updates" blogtitle=@site.title}}</p>
-            <div class="checkout-box">
-                <div class="checkout-plan">
-                    <header class="checkout-plan-header">
-                        <h3>{{t "Monthly"}}</h3>
-                        <span>$</span><strong>{{@price.monthly}}</strong>{{t " / month"}}
-                    </header>
-                    <div class="checkout-plan-content">
-                        <ul>
-                            <li>{{t "Full access to all private posts"}}</li>
-                            <li>{{t "Regular updates with new content"}}</li>
-                            <li>{{t "Support independent publishing"}}</li>
-                            <li>{{t "Simple, secure card payment"}}</li>
-                        </ul>
-                        <a class="button primary fit" href="javascript:" data-members-plan="Monthly">{{t "Choose this plan"}}</a>
-                    </div>
-                </div>
-                <div class="checkout-plan">
-                    <header class="checkout-plan-header">
-                        <h3>{{t "Yearly"}}</h3>
-                        <span>$</span><strong>{{@price.yearly}}</strong>{{t " / year"}}
-                    </header>
-                    <div class="checkout-plan-content">
-                        <ul>
-                            <li>{{t "Full access to all private posts"}}</li>
-                            <li>{{t "Regular updates with new content"}}</li>
-                            <li>{{t "Support independent publishing"}}</li>
-                            <li>{{t "Simple, secure card payment"}}</li>
-                            <li>{{t "One easy payment instead of 12!"}}</li>
-                        </ul>
-                        <a class="button primary fit" href="javascript:" data-members-plan="Yearly">{{t "Choose this plan"}}</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {{!-- No signups: Redirect home --}}
+        <script>window.location = '{{@site.url}}';</script>
 
     {{else}}
 
