comment out subscribe-form

--- a/post.hbs
+++ b/post.hbs
@@ -105,10 +105,10 @@ into the {body} of the default.hbs template --}}
                     />
                 </figure>
                 {{/if}}
-
+<!-- 
                 {{#unless @member}}
                     {{> subscribe-form}}
-                <</unless>>
+                <</unless>> -->
 
                 <section class="post-full-content">
                     <div class="post-content">
