comment out btc-pay

--- a/post.hbs
+++ b/post.hbs
@@ -105,10 +105,10 @@ into the {body} of the default.hbs template --}}
                     />
                 </figure>
                 {{/if}}
-<!-- 
+
                 {{#unless @member}}
                     {{> subscribe-form}}
-                <</unless>> -->
+                <</unless>>
 
                 <section class="post-full-content">
                     <div class="post-content">
@@ -144,7 +144,8 @@ into the {body} of the default.hbs template --}}
                 If you want to embed comments, this is a good place to do it!
             </section>
             --}}
-            <section class="post-full-content">
+
+            <!-- <section class="post-full-content">
               <div class="post-content">
                 <hr></hr>
                 <p>
@@ -174,7 +175,7 @@ into the {body} of the default.hbs template --}}
                 <hr></hr>
 
               </div>
-            </section>
+            </section> -->
 
         </article>
 
