fix syntax subscribe-form

--- a/post.hbs
+++ b/post.hbs
@@ -108,7 +108,7 @@ into the {body} of the default.hbs template --}}
 
                 {{#unless @member}}
                     {{> subscribe-form}}
-                <</unless>>
+                {{/unless}}
 
                 <section class="post-full-content">
                     <div class="post-content">
