--- a/post.hbs
+++ b/post.hbs
@@ -88,6 +88,10 @@ into the {body} of the default.hbs template --}}
             {{#if access}}
             {{!-- if the user has access to this post, show it to them --}}
 
+                {{#unless @member}}
+                    {{> subscribe-form}}
+                {{/unless}}
+
                 {{#if feature_image}}
                 <figure class="post-full-image">
                     {{!-- This is a responsive image, it loads different sizes depending on device
@@ -105,10 +109,6 @@ into the {body} of the default.hbs template --}}
                     />
                 </figure>
                 {{/if}}
-
-                {{#unless @member}}
-                    {{> subscribe-form}}
-                {{/unless}}
 
                 <section class="post-full-content">
                     <div class="post-content">
@@ -145,7 +145,7 @@ into the {body} of the default.hbs template --}}
             </section>
             --}}
 
-            <!-- <section class="post-full-content">
+            <section class="post-full-content">
               <div class="post-content">
                 <hr></hr>
                 <p>
@@ -175,7 +175,7 @@ into the {body} of the default.hbs template --}}
                 <hr></hr>
 
               </div>
-            </section> -->
+            </section>
 
         </article>
 
