--- a/partials/subscribe-form.hbs
+++ b/partials/subscribe-form.hbs
@@ -1,19 +1,20 @@
 <section class="subscribe-form">
     <h3 class="subscribe-form-title">{{t "Subscribe to {blogtitle}" blogtitle=@site.title}}</h3>
     <p class="subscribe-form-description">{{t "Get the latest posts delivered right to your inbox"}}</p>
-    <form data-members-form="subscribe">
-        <div class="form-group">
-            <input class="subscribe-email" data-members-email placeholder="youremail@example.com" autocomplete="false" />
+
+    <form class="signup-form" data-members-form="signup">
+        <h1 class="signup-title">{{t "Signup to {blogtitle}" blogtitle=@site.title}}</h1>
+        <p>{{@site.description}}</p>
+        <div class="signup-box">
+            <input data-members-email type="email" placeholder="Jouw e-mailadres..." required="true" autocomplete="false" />
             <button class="button primary" type="submit">
-                <span class="button-content">{{t "Subscribe"}}</span>
+                <span class="button-content">{{t "Continue"}}</span>
                 <span class="button-loader">{{> "icons/loader"}}</span>
             </button>
         </div>
-        <div class="message-success">
-            <strong>{{t "Great!"}}</strong> {{t "Check your inbox and click the link to confirm your subscription."}}
-        </div>
-        <div class="message-error">
-            {{t "Please enter a valid email address!"}}
-        </div>
+        <p><small>{{t "Already have an account? "}} <a href="/signin/">{{t "Sign in"}}</a></small></p>
+        <div class="message-success"><strong>{{t "Great!"}}</strong> {{t "Check your inbox and click the link to confirm your subscription"}}</div>
+        <div class="message-error">{{t "Please enter a valid email address!"}}</div>
     </form>
+    
 </section>
